src/components/Button/styling/Button.scss
@use '../../../styling/utils';

.str-chat {
  .str-chat__button {
    @include utils.button-reset;
    position: relative; /* creates positioning context for pseudo ::after overlay */
    overflow: hidden;
    white-space: nowrap;
    cursor: pointer;

    display: flex;
    align-items: center;
    justify-content: center;

    font: var(--str-chat__font-heading-xs);
    text-transform: capitalize;

    &.str-chat__button--solid {
      &.str-chat__button--primary {
        background-color: var(--str-chat__button-primary-bg);
        color: var(--str-chat__button-primary-text-on-accent);
      }

      &.str-chat__button--secondary {
        background-color: var(--str-chat__button-secondary-bg);
        color: var(--str-chat__button-secondary-text-on-accent);
      }

      &.str-chat__button--destructive {
        background-color: var(--str-chat__button-destructive-bg);
        color: var(--str-chat__button-destructive-text-on-accent);
      }

      &:disabled {
        background-color: var(--str-chat__background-utility-disabled);
      }
    }

    &.str-chat__button--ghost {
      &.str-chat__button--primary {
        color: var(--str-chat__button-primary-text);
      }

      &.str-chat__button--secondary {
        color: var(--str-chat__button-secondary-text);
      }

      &.str-chat__button--destructive {
        color: var(--str-chat__button-destructive-text);
      }
    }

    // todo: shouldn't we specify also background color?
    &.str-chat__button--outline {
      &.str-chat__button--primary {
        color: var(--str-chat__button-primary-text);
        border-color: var(--str-chat__button-primary-border);
      }

      &.str-chat__button--secondary {
        color: var(--str-chat__button-secondary-text);
        border-color: var(--str-chat__button-secondary-border);
      }

      &.str-chat__button--destructive {
        color: var(--str-chat__button-destructive-text);
        border-color: var(--str-chat__button-destructive-border);
      }
    }

    &.str-chat__button--outline {
      border-width: 1px;
      border-style: solid;
    }

    &.str-chat__button--solid,
    &.str-chat__button--outline,
    &.str-chat__button--ghost {
      &:not(:disabled):hover {
        @include utils.overlay-after(var(--str-chat__background-utility-hover));
      }

      &[aria-expanded='true'],
      &:not(:disabled):active {
        // pressed
        @include utils.overlay-after(var(--str-chat__background-utility-pressed));
      }

      &:not(:disabled):focus-visible {
        // focused
        @include utils.focusable;
      }

      &:not(:disabled)[aria-pressed='true'] {
        // toggled
        @include utils.overlay-after(var(--str-chat__background-utility-selected));
      }

      &:disabled {
        color: var(--str-chat__text-disabled);
        cursor: default;
      }
    }

    &.str-chat__button--outline:disabled {
      border-color: var(--str-chat__border-utility-disabled);
    }

    &.str-chat__button--floating {
      box-shadow: var(--str-chat__box-shadow-2);
    }

    &::after {
      border-radius: inherit;
    }

    &.str-chat__button--size-lg {
      padding-block: var(--str-chat__button-padding-y-lg);
      padding-inline: var(--str-chat__button-padding-x-with-label-lg);
      border-radius: var(--str-chat__button-radius-lg);

      &.str-chat__button--circular {
        padding-inline: var(--str-chat__button-padding-x-icon-only-lg);
      }
    }

    &.str-chat__button--size-md {
      padding-block: var(--str-chat__button-padding-y-md);
      padding-inline: var(--str-chat__button-padding-x-with-label-md);
      border-radius: var(--str-chat__button-radius-md);

      &.str-chat__button--circular {
        padding-inline: var(--str-chat__button-padding-x-icon-only-md);
      }
    }

    &.str-chat__button--size-sm {
      padding-block: var(--str-chat__button-padding-y-sm);
      padding-inline: var(--str-chat__button-padding-x-with-label-sm);
      border-radius: var(--str-chat__button-radius-md);

      &.str-chat__button--circular {
        padding-inline: var(--str-chat__button-padding-x-icon-only-sm);
      }
    }

    &.str-chat__button--size-xs {
      padding-block: var(--str-chat__button-padding-y-xs);
      padding-inline: var(--str-chat__button-padding-x-with-label-xs);
      border-radius: var(--str-chat__button-radius-md);

      &.str-chat__button--circular {
        padding-inline: var(--str-chat__button-padding-x-icon-only-xs);
      }
    }

    &.str-chat__button--circular {
      aspect-ratio: 1/1;
      display: flex;
      align-items: center;
      justify-content: center;
      border-radius: var(--str-chat__button-radius-full);

      .str-chat__icon {
        height: var(--str-chat__icon-size-sm);
        width: var(--str-chat__icon-size-sm);
      }
    }

    .str-chat__button__content {
      display: flex;
      align-items: center;
      justify-content: center;
      gap: var(--str-chat__spacing-xs);
    }
  }

  .str-chat__theme-dark .str-chat__button.str-chat__button--floating {
    box-shadow: var(--str-chat__box-shadow-2);
  }
}

